k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blackgpt
  labels:
    name: blackgpt
    app: blackgpt
